fix: too high z-index value

--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@ body,
 .announcement-banner {
   position: sticky;
   top: 0;
-  z-index: 900;
+  z-index: 600;
 }
 
 tds-header {
